<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="#D6D8D8">


    <EditText
        android:id="@+id/email"
        android:background="@drawable/text_redondo"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginTop="250dp"
        android:ems="13"
        android:hint="@string/email"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:id="@+id/senha"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:background="@drawable/text_redondo"
        android:layout_marginTop="32dp"
        android:ems="13"
        android:layout_below="@+id/email"
        android:hint="@string/senha"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/btEntrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/senha"
        android:layout_marginTop="32dp"
        android:ems="13"
        android:text="@string/entrar"
        android:textStyle="bold"
        android:background="@drawable/button_redondo"
        android:textColor="#F2F2F5"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/txtNãoTemConta"
        android:layout_below="@+id/btEntrar"
        android:layout_marginTop="32dp"
        android:textColor="#519249"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/n_o_tem_uma_conta_crie_aqui"/>


</RelativeLayout>